:sparkles: Timeline & Chapter selection

--- a/sources/sass/pages/chapter1.scss
+++ b/sources/sass/pages/chapter1.scss
@@ -1,3 +1,18 @@
 .chapter1 {
-  
+  .scene1 {
+    background-color: red;
+    display: block;
+  }
+  .scene2 {
+    background-color: yellow;
+  }
+  .scene3 {
+    background-color: green;
+  }
+  .scene4 {
+    background-color: purple;
+  }
+  .scene5 {
+    background-color: blue;
+  }
 }
