--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -12,7 +12,6 @@
 @import 'pages/chapter3.scss';
 @import 'pages/chapter4.scss';
 @import 'pages/chapter5.scss';
-@import 'pages/chapter6.scss';
 
 body {
   position: relative;
@@ -29,8 +28,27 @@ body {
 }
 
 .scene {
+  display: none;
   height: 100%;
   width: 100%;
-  position: relative;
-  background-color: grey;
+  position: absolute;
+  opacity: 0;
+  transition-duration: .5s;
+  transition-property: opacity;
+  will-change: opacity;
+  &--active {
+    opacity: 1;
+  }
+}
+
+.logo {
+  position: absolute;
+  top: 35px;
+  left: 50px;
+  z-index: 100;
+  width: 50px;
+  height: 50px;
+  &--img {
+    width: 100%;
+  }
 }
