--- a/sources/sass/pages/home.scss
+++ b/sources/sass/pages/home.scss
@@ -6,140 +6,74 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url(../../../dist/assets/img/thokhang_project_landing.jpg);
+  background-image: url(../../assets/img/thokhang_project_landing.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-    &--content {
-      position: relative;
-      top: 0;
+  &--content {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    &--center {
+      z-index: 100;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      text-align: center;
+      transform: translate(-50%, -50%);
+      &--btn a {
+        transform: translate(-50%, 0%);
+        margin-top: 150px;
+        padding: 15px 30px;
+        border-radius: 4px;
+        border: 2px solid $red;
+        color: #fff;
+        background: $red;
+        text-transform: uppercase;
+        position: absolute;
+        transition: all 0.3s ease-in-out;
+        box-shadow: 0px 0px 8px 1px #FE002A;
+      }
+      &--btn a:hover {
+        color: $red;
+        background: rgba(0, 0, 0, 0.51);
+        border: 2px solid $red;
+      }
+      &--subtitle {
+        margin-top: -240px;
+        color: #4a4a4a;
+      }
+    }
+    &--back {
+      position: absolute;
+      top: -50px;
       left: 0;
+      right: 0;
+      bottom: 0;
       width: 100%;
       height: 100%;
-      &--center {
-        z-index: 100;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        text-align: center;
-        transform: translate(-50%, -50%);
-        &--btn a {
-          transform: translate(-50%, 0%);
-          margin-top: 150px;
-          padding: 15px 30px;
-          border-radius: 4px;
-          border: 2px solid $red;
-          color: #fff;
-          background: $red;
-          text-transform: uppercase;
-          position: absolute;
-          transition: all 0.3s ease-in-out;
-        }
-        &--btn a:hover {
-          color: $red;
-          background: rgba(0, 0, 0, 0.51);
-          border: 2px solid $red;
-        }
-        &--subtitle {
-          margin-top: -240px;
-          color: #4a4a4a;
-        }
-      } 
-      &--back {
-        position: absolute;
-        top: -50px;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 20;
-        background-image: url(../../../dist/assets/img/thokhang_project_text.png);
-        background-position: center;
-        background-size:contain;
-        background-repeat: no-repeat;
-      }
-      &--front {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        height: 100%;
-        width: 100%;
-        z-index: 30;
-        opacity: 0.8; 
-        background-image: url(../../../dist/assets/img/thokhang_project_top_layer.png);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-      } 
+      z-index: 20;
+      background-image: url(../../assets/img/thokhang_project_text.png);
+      background-position: center;
+      background-size:contain;
+      background-repeat: no-repeat;
     }
-//  &--center {
-//    margin-top: -60px;
-//    position: absolute;
-//    top: 50%;
-//    left: 50%;
-//    text-align: center;
-//    transform: translate(-50%, -50%);
-//    &--img {
-//      width: 85px;
-//    }
-//    &--subtitle {
-//      font-size: 24px;
-//      color: #FFFFFF;
-//      display: block;
-//      margin-top: 15px;
-//    }
-//    &--title {
-//      font-size: 72px;
-//      color: $red;
-//      text-transform: uppercase;
-//      display: block;
-//      margin-top: 20px;
-//      &::after {
-//        content: '';
-//        display: block;
-//        height: 3px;
-//        width: 100px;
-//        background: #FFFFFF;
-//        margin: 10px auto;
-//      }
-//    }
-//    &--description {
-//      display: block;
-//      margin-top: 30px;
-//      font-size: 18px;
-//      color: #FFFFFF;
-//      letter-spacing: 0.45px;
-//    }
-//    &--btn {
-//      display: inline-block;
-//      margin-top: 20px;
-//      border: 1px solid black;
-//    }
-//  }
-//  &--scroll {
-//    position: absolute;
-//    bottom: 0;
-//    left: 50%;
-//    transform: translateX(-50%);
-//    display: inline-block;
-//    text-align: center;
-//    width: 120px;
-//    &--txt {
-//      color: #fff;
-//      font-size: 18px;
-//      letter-spacing: 0.45px;
-//      &::after {
-//        background-color: #fff;
-//        content: '';
-//        display: block;
-//        width: 3px;
-//        height: 70px;
-//        margin-top: 10px;
-//        margin: 10px auto 0 auto;
-//      }
-//    }
-//  }
+    &--front {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 100%;
+      width: 100%;
+      z-index: 30;
+      opacity: 0.8;
+      background-image: url(../../assets/img/thokhang_project_top_layer.png);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+  }
 }
