--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -36,8 +36,60 @@ body {
   transition-duration: .5s;
   transition-property: opacity;
   will-change: opacity;
+  display: block;
   &--active {
     opacity: 1;
+  }
+  font-family: 'Lora', serif;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.scene--introduction {
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  &--overlay {
+    z-index: 20;
+    width: 100%;
+    height: 100%;
+    background-color: $black;
+    opacity: 0.8;
+  }
+  &--center {
+    color: $white;
+    z-index: 40;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    &--h1 {
+      font-family: 'Fjalla One', sans-serif;
+      text-transform: uppercase;
+      font-size: 72px;
+      color: $red;
+      position: relative;
+      text-align: center;
+      width: 100%;
+    }
+    &--h1:after {
+      content:'';
+      width: 100px;
+      height: 3px;
+      background: $white;
+      position: absolute;
+      bottom: -50px;
+      left: 50%;
+      margin-left: -50px;
+    }
+    &--h2 {
+      margin-bottom: 46px;
+    }
+    &--description {
+      margin-top: 85px;  
+      color: $white;
+    }
   }
 }
 
