--- a/sources/sass/pages/chapter1.scss
+++ b/sources/sass/pages/chapter1.scss
@@ -1,7 +1,6 @@
 .chapter1 {
   .scene1 {
-    background-color: red;
-    display: block;
+    background-image: url(../../assets/img/menu_chapter1.jpg); 
   }
   .scene2 {
     background-color: yellow;
