--- a/sources/sass/pages/home.scss
+++ b/sources/sass/pages/home.scss
@@ -25,10 +25,9 @@
       transform: translate(-50%, -50%);
       &--btn a {
         transform: translate(-50%, 0%);
-        margin-top: 150px;
+        margin-top: 180px;
         padding: 15px 30px;
         border-radius: 4px;
-        border: 2px solid $red;
         color: #fff;
         background: $red;
         text-transform: uppercase;
@@ -37,13 +36,15 @@
         box-shadow: 0px 0px 8px 1px #FE002A;
       }
       &--btn a:hover {
-        color: $red;
-        background: rgba(0, 0, 0, 0.51);
-        border: 2px solid $red;
+        background: darken($red, 10);
       }
       &--subtitle {
-        margin-top: -240px;
-        color: #4a4a4a;
+        font-size: 22px;
+        font-weight: 100;
+        text-transform: uppercase;
+        margin-top: 100px;
+        letter-spacing: 2px;
+        color: #fff;
       }
     }
     &--back {
