:construction: WIP chapter 1

--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -45,6 +45,16 @@ body {
   line-height: 26px;
 }
 
+.scene--h1 {
+  position: absolute;
+  top: 35px;
+  left: 110px;
+  font-family: 'Fjalla One', sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: $white;
+}
+
 .scene--introduction {
   background-position: top center;
   background-repeat: no-repeat;
@@ -95,11 +105,11 @@ body {
 
 .logo {
   position: absolute;
-  top: 35px;
+  top: 25px;
   left: 50px;
   z-index: 100;
-  width: 50px;
-  height: 50px;
+  width: 45px;
+  height: 45px;
   &--img {
     width: 100%;
   }
