--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -40,19 +40,20 @@ body {
   &--active {
     opacity: 1;
   }
-  font-family: 'Lora', serif;
+  font-family: $content;
   font-weight: 400;
   line-height: 26px;
 }
 
 .scene--h1 {
   position: absolute;
+  z-index: 200;
   top: 35px;
-  left: 110px;
-  font-family: 'Fjalla One', sans-serif;
+  left: 90px;
+  font-family: $title;
   text-transform: uppercase;
   font-size: 20px;
-  color: $white;
+  color: $transparent-white;
 }
 
 .scene--introduction {
@@ -75,7 +76,7 @@ body {
     text-align: center;
     transform: translate(-50%, -50%);
     &--h1 {
-      font-family: 'Fjalla One', sans-serif;
+      font-family: $title;
       text-transform: uppercase;
       font-size: 72px;
       color: $red;
@@ -106,7 +107,7 @@ body {
 .logo {
   position: absolute;
   top: 25px;
-  left: 50px;
+  left: 30px;
   z-index: 100;
   width: 45px;
   height: 45px;
@@ -114,3 +115,21 @@ body {
     width: 100%;
   }
 }
+
+//.slide-hover {
+//  z-index: 400;
+//}
+//
+//.slide-hover::after {
+//  position: absolute;
+//  content: '';
+//  width: 0;
+//  height: 10px;
+//  background-color: rgba(255, 255, 255, 0.49);
+//  top: 15px;
+//  left: -5px;
+//}
+//
+//.slide-hover:hover::after{
+//  width: 60px;
+//}
