--- a/sources/sass/pages/chapter1.scss
+++ b/sources/sass/pages/chapter1.scss
@@ -17,12 +17,88 @@
     }
   }
   .scene3 {
-    background-color: green;
+    background-color: #191919;
+    &--center {
+      position: absolute;
+      left: 50%;
+      top: 15%;
+      transform: translate(-50%, 0%);
+      height: 70%;
+      &--svg {
+        height: 100%;
+        width: auto;
+      }
+    }
   }
   .scene4 {
-    background-color: purple;
+    background-color: #191919;
+    background-image: url(../../assets/img/chapter1_slide_4.jpg); 
+    background-position: center;
+    background-size: cover;
+    &--group {
+      z-index: 200;
+      position: absolute;
+      bottom: 14%;
+      left: 10%;
+      color: $white;
+      width: 100%;
+      &--content {
+        display: inline-block;
+        width: 35%;
+        margin-right: 10%;
+        &--h2 {
+          margin-bottom: 10px;
+          font-size: 18px;
+          font-family: $title;
+          text-transform: uppercase;
+          color: $red;
+        }
+        &--p {
+          font-size: 14px;
+        }
+      }
+      .group2 {
+        position: relative;
+        top: -26px;
+      }
+    }
+    &--overlay {
+      z-index: 100;
+      background-color: $black;
+      opacity: 0.7;
+      width: 100%;
+      height: 100%;
+    }
   }
   .scene5 {
-    background-color: blue;
+    background-color: #191919;
+    &--card {
+      background-color: $black;
+      opacity: 0.7;
+      position: relative;
+      left: 90px;
+      top: 135px;
+      bottom: 10%;
+      border-radius: 2px;
+      padding: 40px 50px;
+      width: 75%;
+      font-family: $title;
+      &--categories {
+        color: $transparent-white;
+        &--category.active {
+          color: $red;
+          transform: translateX(-5px);
+        }
+        &--category {
+          margin-bottom: 20px;
+          transition: all 0.15s ease-in-out;
+        }
+        &--category:hover {
+          cursor: pointer;
+          transform: translateX(-5px);
+          color: $red;
+        }
+      }
+    }
   }
 }
