--- a/sources/sass/var.scss
+++ b/sources/sass/var.scss
@@ -1,3 +1,6 @@
 $red: #FE002A;
 $black: #010101;
 $white: #fff;
+$transparent-white: rgba(255, 255, 255, 0.70);
+$title: 'Fjalla One', sans-serif;
+$content: 'Lora', serif;
