--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -19,6 +19,7 @@ body {
   position: fixed;
   height: 100%;
   width: 100%;
+  background: black;
 }
 
 .chapter {
@@ -60,13 +61,6 @@ body {
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  &--overlay {
-    z-index: 20;
-    width: 100%;
-    height: 100%;
-    background-color: $black;
-    opacity: 0.8;
-  }
   &--center {
     color: $white;
     z-index: 40;
@@ -98,10 +92,18 @@ body {
       margin-bottom: 46px;
     }
     &--description {
-      margin-top: 85px;  
+      margin-top: 85px;
       color: $white;
     }
   }
+}
+
+.overlay {
+  z-index: 100;
+  background-color: $black;
+  opacity: 0.7;
+  width: 100%;
+  height: 100%;
 }
 
 .logo {
