:lipstick: add chapter 2

--- a/sources/sass/var.scss
+++ b/sources/sass/var.scss
@@ -1,6 +1,7 @@
 $red: #FE002A;
 $black: #010101;
 $white: #fff;
+$grey: #7F7F7F;
 $transparent-white: rgba(255, 255, 255, 0.70);
 $title: 'Fjalla One', sans-serif;
 $content: 'Lora', serif;
