--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -1,5 +1,162 @@
 .chapter2 {
   .scene1 {
-    background-image: url(../../assets/img/menu_chapter2.jpg); 
+    background-image: url("../../assets/img/menu_chapter2.jpg");
+    // chapter2_full.jpg
+  }
+  /*** screen 2 ***/
+  .scene2 {
+    background-color: #191919;
+    background-image: url("../../assets/img/chapter1_slide_4.jpg");
+    background-position: center;
+    background-size: cover;
+  }
+
+  .scene4 {
+    background-color: #191919;
+    background-image: url("../../assets/img/chapter2_slide_4.jpg");
+    background-position: center;
+    background-size: cover;
+
+    p.title {
+      z-index: 10;
+      position: absolute;
+      text-transform: uppercase;
+      font-family: $title;
+      color: $red;
+      font-size: 50px;
+      text-align: center;
+      top: 30%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    p.content {
+      position: absolute;
+      z-index: 10;
+      font-family: $content;
+      color: $white;
+      font-size: 16px;
+      text-align: center;
+      width: 60vw;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    div.testimony-button {
+      position: absolute;
+      top: 32vh;
+      right: 50px;
+      z-index: 100;
+      width:400px;
+      height:80px;
+      cursor: pointer;
+
+      img {
+        width: 65px;
+        height: 65px;
+        border-radius: 100px;
+        border: 5px solid white;
+        z-index: 101;
+        position: absolute;
+        right: 0;
+        top: 0;
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.20);
+      }
+
+      span {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 100;
+        background: $white;
+        width: 300px;
+        height: 65px;
+        border-radius: 100px;
+        padding: 5px 30px;
+        opacity: 0;
+        transform-origin: right;
+        margin-right:10px;
+        transform: scaleX(0);
+        transition: all ease-out 0.3s;
+        box-shadow: 0 2px 10px 0 rgba(0,0,0,0.20);
+
+        p:first-child {
+          font-family: $content;
+          font-size: 13px;
+          color: $black;
+        }
+
+        p:last-child {
+          font-family: $title;
+          font-size: 18px;
+          text-transform: uppercase;
+          color: $red;
+        }
+      }
+      &:hover span {
+        opacity:1;
+        transform: scaleX(1);
+      }
+    }
+    .second-testimony{
+      margin-top:90px;
+    }
+  }
+}
+
+div.card {
+  background-color: black;
+  position: absolute;
+  top: 15vh;
+  left: 7vw;
+  width: 80vw;
+  height: 70vh;
+  margin: auto;
+  z-index: 102;
+
+  p.card-subtitle,
+  p.card-title {
+    font-family: $title;
+    font-size: 24px;
+    color: white;
+    text-transform: uppercase;
+    margin: 30px;
+  }
+
+  p.card-subtitle {
+    font-size: 20px;
+    color: $red;
+    margin: -20px 30px;
+  }
+
+  div {
+    p {
+      display: inline-block;
+    }
+
+    p.card-type {
+      font-size: 18px;
+      color: $grey;
+      font-family: $title;
+      font-size: 18px;
+      text-transform: uppercase;
+      margin: 30px 30px 0;
+    }
+
+    p.card-content {
+      font-family: $content;
+      color: $white;
+      width: 400px;
+      vertical-align: top;
+      margin: 30px 30px 0 0;
+    }
+  }
+
+  img {
+    position: absolute;
+    right: 0;
+    top: -30vh;
+    width: 500px;
   }
 }
