--- a/sources/sass/pages/chapter3.scss
+++ b/sources/sass/pages/chapter3.scss
@@ -59,14 +59,18 @@
     }
   }
   .scene3 {
+    background-image: url(../../assets/img/chapter3_scene3.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     .content {
       width: 710px;
       height: 420px;
       padding: 0 100px;
-      background-color: green;
+      background-color: #000;
       position: absolute;
       bottom: 160px;
       right: 260px;
+      padding-top: 60px;
       &--core {
         font-family: $content;
         font-size: 18px;
@@ -78,6 +82,7 @@
         line-height: 40px;
       }
       &--title {
+        margin-top: 5px;
         font-family: $title;
         font-size: 36px;
         color: $red;
@@ -96,6 +101,70 @@
       }
     }
   }
+  .scene4 {
+    background-image: url(../../assets/img/chapter3_scene4.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    .content {
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      &--item {
+        &:nth-child(1){
+          margin-right: 200px;
+        }
+        &:nth-child(2){
+          width: 340px;
+        }
+        &--number {
+          font-family: $title;
+          font-size: 36px;
+          color: #FE002A;
+          letter-spacing: 0;
+          line-height: 33px;
+          display: inline-block;
+          margin-right: 10px;
+        }
+        &--title {
+          display: inline-block;
+          font-family: $content;
+          font-size: 18px;
+          color: #FFFFFF;
+          letter-spacing: 0;
+        }
+        &--img {
+          margin-top: 15px;
+          svg {
+
+          }
+        }
+      }
+      &--subtitle {
+        position: absolute;
+        bottom: -70px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        font-family: $content;
+        font-size: 18px;
+        width: 700px;
+      }
+    }
+  }
+  .scene5 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+  }
 }
 .popup--btn {
   position: absolute;
@@ -109,8 +178,33 @@
   line-height: 44px;
   transition-duration: .3s;
   background-color: #fff;
+  z-index: 5;
   &:hover {
     transform: scale(1.1);
     background-color: darken(#fff, 10);
+  }
+}
+
+.player--video {
+  position: absolute;
+  bottom: 80px;
+  left: 70px;
+  &--btn {
+    display: inline-block;
+    height: 44px;
+    width: 44px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0 6px 6px 1px rgba(30,30,30,0.40);
+    line-height: 54px;
+    padding-left: 16px;
+  }
+  &--title {
+    font-family: Lora-Regular;
+    font-size: 18px;
+    letter-spacing: 0.75px;
+    margin-left: 20px;
+    position: relative;
+    top: -3px;
   }
 }
