:parkles: Animation slider

--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -25,21 +25,16 @@ body {
 .chapter {
   position: relative;
   height: 100%;
-  width: 100%;
+  transition-duration: .5s;
+  transition-property: transform;
+  will-change: translate;
 }
 
 .scene {
-  display: none;
+  position: relative;
   height: 100%;
-  width: 100%;
-  position: absolute;
-  opacity: 0;
-  transition-duration: .5s;
-  transition-property: opacity;
-  will-change: opacity;
-  display: block;
+  float: left;
   &--active {
-    opacity: 1;
   }
   font-family: $content;
   font-weight: 400;
