--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -9,6 +9,13 @@
     background-image: url("../../assets/img/chapter1_slide_4.jpg");
     background-position: center;
     background-size: cover;
+    img {
+      position: absolute;
+      right: 170px;
+      bottom:60px;
+      width: 500px;
+      z-index:110;
+    }
   }
 
   .scene4 {
@@ -18,6 +25,13 @@
     background-size: cover;
   }
   .scene5{
+    img {
+      position: absolute;
+      right: 30%;
+      bottom:60px;
+      width: 500px;
+      z-index:110;
+    }
     div.container-quotes{
       width:95vw;
       height:70vh;
@@ -123,16 +137,10 @@ div.card {
       margin: 30px 30px 0 0;
     }
   }
-
-  img {
-    position: absolute;
-    right: 0;
-    top: -30vh;
-    width: 500px;
-  }
 }
+
 // testimony
-p.title {
+p.davao-title {
   z-index: 10;
   position: absolute;
   text-transform: uppercase;
