--- a/sources/sass/pages/chapter1.scss
+++ b/sources/sass/pages/chapter1.scss
@@ -64,67 +64,100 @@
     }
   }
   .scene5 {
-    .category-active div {
-      color: $red;
-      transform: translateX(-6px);
-    }
-    .category-active img, .category-active p {
-      display: inline-block;
-    }
-    background-color: #191919;
-    &--card {
-      background-color: $black;
-      opacity: 0.7;
-      position: relative;
-      left: 90px;
-      top: 135px;
-      bottom: 10%;
-      border-radius: 2px;
-      padding: 30px 40px;
-      width: 68%;
-      font-family: $title;
-      &--categories {
-        color: $transparent-white;
-        &--category {
-          &--title {
-            display: inline-block;
-            padding: 15px 10px;
-            transition: all 0.15s ease-in-out;
-          }
-          &--img {
-            position: absolute;
-            width: 80%;
-            height: auto;
-            bottom: -60px;
-            left: 200px;
-            border-radius: 1px;
-            box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.12);
-            display: none;
-          }
-          &--description {
-            z-index: 200;
-            position: absolute;
-            width: 45%;
-            height: auto;
-            bottom: -50px;
-            left: 230px;
-            font-family: $content;
-            font-size: 14px;
-            color: $white;
-            display: none;
-          }
-          &--title:hover {
-            cursor: pointer;
-            transform: translateX(-6px);
-            color: $red;
-          }
-          &--title:hover + img {
-            display: block;
-          }
-          &--title:hover + img + p {
-            display: block;
-          }
+    &--content {
+      background-color: #191919;
+      width: 100%;
+      height: 100%;
+      div {
+        width: 100%;
+        height: auto;
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
         }
+        p {
+          color: $white;
+          position: absolute;
+          bottom: 20%;
+          transform: translateY(25%);
+          left: 7%;
+          width: 400px;
+        }
+      }
+      &--money img,
+      &--money p {
+        opacity: 1;
+        z-index: 20;
+      }
+      &--geographic img,
+      &--geographic p,
+      &--production img,
+      &--production p,
+      &--areas img,
+      &--areas p,
+      &--women img,
+      &--women p
+      {
+        opacity: 0;
+        z-index: 18;
+        transition: opacity 0.15s ease-in-out; 
+      }
+      &--geographic.active-content img,
+      &--geographic.active-content p,
+      &--production.active-content img,
+      &--production.active-content p,
+      &--areas.active-content img,
+      &--areas.active-content p,
+      &--women.active-content img,
+      &--women.active-content p
+      {
+        opacity: 1;
+        z-index: 25;
+      }
+    }
+    &--nav {
+      z-index: 100;
+      position: absolute;
+      left: 7%;
+      bottom: 50%;
+      transform: translateY(25%);
+      font-family: $title;
+      width: 100px;
+      .money-title {
+        transform: translateX(-10px);
+        color: $red;
+      }
+      .money-title::after {
+        opacity: 1;
+      }
+      &--title {
+        padding: 5px;
+        transition: all 0.15s ease-in-out;
+        color: $white;
+      }
+      &--title::after {
+        position: absolute;
+        left: -8px;
+        top: 10px;
+        width:3px;
+        border-radius: 2px;
+        height: 15px;
+        background:$red;
+        content:'';
+        opacity:0;
+        transition: all 0.15s ease-in-out;
+      }
+      &--title:hover {
+        cursor: pointer;
+        transform: translateX(-10px);
+        color: $red;
+      }
+      &--title:hover {
+        
+      }
+      &--title:hover::after {
+        opacity:1;
       }
     }
   }
