--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -24,6 +24,105 @@
     background-position: center;
     background-size: cover;
   }
+  .scene6 {
+    &--content {
+      background-color: #191919;
+      width: 100%;
+      height: 100%;
+      div {
+        width: 100%;
+        height: auto;
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+        p {
+          color: $white;
+          position: absolute;
+          bottom: 20%;
+          transform: translateY(25%);
+          left: 7%;
+          width: 400px;
+          text-shadow: 2px 2px 8px rgba(black, 0.7);
+        }
+      }
+      &--money img,
+      &--money p {
+        opacity: 1;
+        z-index: 20;
+      }
+      &--geographic img,
+      &--geographic p,
+      &--production img,
+      &--production p,
+      &--areas img,
+      &--areas p,
+      &--women img,
+      &--women p
+      {
+        opacity: 0;
+        z-index: 18;
+        transition: opacity 0.15s ease-in-out;
+      }
+      &--geographic.active-content img,
+      &--geographic.active-content p,
+      &--production.active-content img,
+      &--production.active-content p,
+      &--areas.active-content img,
+      &--areas.active-content p,
+      &--women.active-content img,
+      &--women.active-content p
+      {
+        opacity: 1;
+        z-index: 25;
+      }
+    }
+    &--nav {
+      z-index: 100;
+      position: absolute;
+      left: 7%;
+      bottom: 50%;
+      transform: translateY(25%);
+      font-family: $title;
+      width: 150px;
+      .money-title {
+        transform: translateX(-10px);
+        color: $red;
+      }
+      .money-title::after {
+        opacity: 1;
+      }
+      &--title {
+        padding: 5px;
+        transition: all 0.15s ease-in-out;
+        color: $white;
+      }
+      &--title::after {
+        position: absolute;
+        left: -8px;
+        top: 10px;
+        width:3px;
+        border-radius: 2px;
+        height: 15px;
+        background:$red;
+        content:'';
+        opacity:0;
+        transition: all 0.15s ease-in-out;
+      }
+      &--title:hover {
+        cursor: pointer;
+        transform: translateX(-10px);
+        color: $red;
+      }
+      &--title:hover {
+
+      }
+      &--title:hover::after {
+        opacity:1;
+      }
+    }
+  }
   .scene5{
     img {
       position: absolute;
@@ -73,11 +172,24 @@
     }
   }
 
-  .scene6 {
+  .scene7 {
     background-color: #191919;
     background-image: url("../../assets/img/chapter2_slide_4.jpg");
     background-position: center;
     background-size: cover;
+    .card{
+      display:none;
+      .card-content{
+        width:65vw;
+      }
+      .testimony-quote{
+        font-family: $content;
+        font-size: 22px;
+        color:white;
+        font-style: italic;
+        margin: 40px 20px;
+      }
+    }
     p.content{
       margin-top:-50px;
     }
@@ -170,7 +282,7 @@ div.testimony-button {
   position: absolute;
   top: 32vh;
   right: 50px;
-  z-index: 100;
+  z-index: 110;
   width: 400px;
   height: 80px;
   cursor: pointer;
