--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -113,6 +113,22 @@ body {
   }
 }
 
+.scene--active {
+  .svg-animation {
+    stroke-dasharray: 1500;
+    stroke-dashoffset: 1500;
+    animation: draw 4s ease-in-out forwards;
+    @keyframes draw {
+      0% {
+        stroke-dashoffset: 1500;
+      }
+      100% {
+        stroke-dashoffset: 0;
+      }
+    }
+  }
+}
+
 //.slide-hover {
 //  z-index: 400;
 //}
