:lipstick: UI improve

--- a/sources/sass/pages/home.scss
+++ b/sources/sass/pages/home.scss
@@ -26,7 +26,7 @@
       &--btn a {
         transform: translate(-50%, 0%);
         margin-top: 180px;
-        padding: 15px 30px;
+        padding: 15px 40px;
         border-radius: 4px;
         color: #fff;
         background: $red;
@@ -40,12 +40,11 @@
         background: darken($red, 6);
       }
       &--subtitle {
-        font-size: 16px;
+        font-size: 25px;
         font-weight: 100;
-        margin-top: 120px;
-        letter-spacing: 1px;
-        color: rgb(26, 26, 26);
-        font-family: $title;
+        margin-top: 110px;
+        color: rgba(#fff, .8);
+        font-family: $content;
       }
     }
     &--back {
