--- a/sources/sass/partials/navBar.scss
+++ b/sources/sass/partials/navBar.scss
@@ -26,7 +26,7 @@
       position: absolute;
       top: 4px;
       left: 0;
-      background: rgba(255,255,255,0.30);
+      background: #333333;
       z-index: -1;
       &--full {
         position: absolute;
@@ -39,14 +39,14 @@
         transform: scaleX(0);
         transition-duration: .3s;
         transition-property: transform;
+        box-shadow: 0px 0px 8px 1px #FE002A;
       }
     }
     &--link {
-      background-color: #000;
+      background-color: #333333;
       display: inline-block;
       height: 10px;
       width: 10px;
-      border: 1px solid #FFFFFF;
       border-radius: 50%;
       transition-duration: .3s;
       transition-property: background, border;
@@ -55,8 +55,6 @@
         content: '';
         position: absolute;
         display: block;
-        top: -1px;
-        left: -1px;
         height: 10px;
         width: 10px;
         border-radius: 50%;
@@ -67,8 +65,10 @@
         transition-property: transform;
       }
       &--active {
+        transform: scale(1.1);
+        box-shadow: 0px 0px 8px 1px #FE002A;
         &::after {
-          transform: scale(1);
+          transform: scale(1.1);
         }
       }
       &:hover::after {
