:lipstick: add testimony to mayor slide

--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -1,7 +1,6 @@
 .chapter2 {
   .scene1 {
-    background-image: url("../../assets/img/menu_chapter2.jpg");
-    // chapter2_full.jpg
+    background-image: url("../../assets/img/chapter2_full.jpg");
   }
   /*** screen 2 ***/
   .scene2 {
@@ -15,6 +14,12 @@
       bottom:60px;
       width: 500px;
       z-index:110;
+    }
+  }
+
+  .scene3{
+    .second-testimony{
+      margin-top: 90px;
     }
   }
 
@@ -265,7 +270,7 @@ p.davao-title {
   transform: translateX(-50%) translateY(-50%);
 }
 
-p.content {
+p.davao-content {
   position: absolute;
   z-index: 10;
   font-family: $content;
