--- a/sources/sass/pages/chapter4.scss
+++ b/sources/sass/pages/chapter4.scss
@@ -1,34 +1,37 @@
 .chapter4 {
-    .scene3 {
-        background-image:url(../../assets/img/prison_Quezon.png);
-        .title {
-            font-family: Lora-Regular;
-            font-size: 18px;
-            text-align: center;
-            color: #FFFFFF;
-            letter-spacing: 0;
-            line-height: 40px;
-            position: absolute;
-            left: 50%;
-            top: 20%;
-            transform: translate(-50%, 0%);
-            height: 70%;
-        }
-        .content {
-            width: 920px;
-            font-size: 32px;
-            strong : 72px;
-            position: absolute;
-            left: 20%;
-            top: 35%;
-            color: #FFFFFF;
-            text-align: center;
-            font-family: FjallaOne-Regular;
-            line-height: 108px;
-        }
-        .content strong{
-            font-size: 72px;
-            color: red;
-        }
+  .scene1 {
+    background-image: url(../../assets/img/chapter4_full.jpg);
+  }  
+  .scene3 {
+    background-image:url(../../assets/img/prison_Quezon.png);
+    .title {
+      font-family: Lora-Regular;
+      font-size: 18px;
+      text-align: center;
+      color: #FFFFFF;
+      letter-spacing: 0;
+      line-height: 40px;
+      position: absolute;
+      left: 50%;
+      top: 20%;
+      transform: translate(-50%, 0%);
+      height: 70%;
     }
+    .content {
+      width: 920px;
+      font-size: 32px;
+      strong : 72px;
+      position: absolute;
+      left: 20%;
+      top: 35%;
+      color: #FFFFFF;
+      text-align: center;
+      font-family: FjallaOne-Regular;
+      line-height: 108px;
+    }
+    .content strong{
+      font-size: 72px;
+      color: red;
+    }
+  }
 }
