--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -182,8 +182,14 @@
     background-image: url("../../assets/img/chapter2_slide_4.jpg");
     background-position: center;
     background-size: cover;
+    p.davao-content{
+      top:30vh;
+    }
+    p.davao-subtitle{
+      top:40vh;
+    }
     .card{
-      display:none;
+      display: none;
       .card-content{
         width:65vw;
       }
@@ -194,6 +200,16 @@
         font-style: italic;
         margin: 40px 20px;
       }
+    }
+    .player--video--btn{
+      display:block;
+      margin:10px auto;
+    }
+    .player--video--title{
+      color:$white;
+      left:32vw;
+      font-size:15px;
+      transform: translateX(-50%) translateY(-50%);
     }
     p.content{
       margin-top:-50px;
@@ -216,6 +232,7 @@ div.card {
   height: 70vh;
   margin: auto;
   z-index: 102;
+  border-radius: 4px;
 
   p.card-subtitle,
   p.card-title {
@@ -270,7 +287,7 @@ p.davao-title {
   transform: translateX(-50%) translateY(-50%);
 }
 
-p.davao-content {
+p.davao-content, p.davao-subtitle {
   position: absolute;
   z-index: 10;
   font-family: $content;
