--- a/sources/sass/pages/chapter3.scss
+++ b/sources/sass/pages/chapter3.scss
@@ -167,6 +167,16 @@
       transform: translateX(-50%) translateY(-50%);
     }
   }
+  .scene6 {
+    &--background {
+      background-image: url(../../assets/img/chapter3_part5_map.png);
+      width: 100%;
+      height: 100%;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat; 
+    }
+  }
 }
 .popup--btn {
   position: absolute;
