--- a/sources/sass/pages/chapter1.scss
+++ b/sources/sass/pages/chapter1.scss
@@ -21,9 +21,8 @@
     &--center {
       position: absolute;
       left: 50%;
-      top: 15%;
-      transform: translate(-50%, 0%);
-      height: 70%;
+      top: 50%;
+      transform: translate(-50%, -50%);
       &--svg {
         height: 100%;
         width: auto;
@@ -38,23 +37,29 @@
     &--group {
       z-index: 200;
       position: absolute;
-      bottom: 14%;
-      left: 10%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       color: $white;
-      width: 100%;
+      width: 1010px;
+      display: flex;
+      align-content: flex-end;
       &--content {
         display: inline-block;
-        width: 35%;
-        margin-right: 10%;
+        width: 450px;
+        &:nth-child(2){
+          margin-top: 25px;
+          margin-left: 100px;
+        }
         &--h2 {
           margin-bottom: 10px;
-          font-size: 18px;
+          font-size: 22px;
           font-family: $title;
           text-transform: uppercase;
           color: $red;
         }
         &--p {
-          font-size: 14px;
+          font-size: 18px;
         }
       }
       .group2 {
@@ -80,9 +85,10 @@
           color: $white;
           position: absolute;
           bottom: 20%;
+          font-size: 20px;
           transform: translateY(25%);
           left: 7%;
-          width: 400px;
+          width: 600px;
           text-shadow: 2px 2px 8px rgba(black, 0.7);
         }
       }
@@ -133,17 +139,19 @@
         opacity: 1;
       }
       &--title {
-        padding: 5px;
+        padding: 10px;
+        font-size: 22px;
         transition: all 0.15s ease-in-out;
         color: $white;
+        position: relative;
       }
       &--title::after {
         position: absolute;
         left: -8px;
-        top: 10px;
+        top: 11px;
         width:3px;
         border-radius: 2px;
-        height: 15px;
+        height: 20px;
         background:$red;
         content:'';
         opacity:0;
