--- a/sources/sass/partials/navBar.scss
+++ b/sources/sass/partials/navBar.scss
@@ -10,8 +10,45 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  &:hover {
+    .nav--timeline--link--txt {
+      opacity: 1;
+    }
+  }
+  &--chapter {
+    font-family: $title;
+    font-size: 14px;
+    text-transform: uppercase;
+    position: absolute;
+    left: 150px;
+    top: 22px;
+  }
   &--menu {
+    overflow: hidden;
+    width: 55px;
+    height: 59px;
     margin-left: 50px;
+    svg {
+      z-index: -1;
+      position: relative;
+    }
+    &:hover {
+      .circle {
+        stroke: #fff;
+        stroke-dasharray: 300;
+        stroke-dashoffset: 0;
+        animation-iteration-count: 1;
+        animation-name: rotate;
+        animation-duration: 1s;
+        animation-direction: reverse;
+        animation-timing-function: ease-in;
+      }
+    }
+    @keyframes rotate {
+      to {
+       stroke-dashoffset: 300;
+      }
+    }
   }
   &--timeline {
     width: 60%;
@@ -64,9 +101,25 @@
         transition-duration: .3s;
         transition-property: transform;
       }
+      &--txt {
+        position: absolute;
+        top: -17px;
+        font-family: $title;
+        text-transform: uppercase;
+        color: #333333;
+        font-size: 12px;
+        left: 50%;
+        transform: translateX(-50%);
+        opacity: 0;
+        transition-duration: .3s;
+        transition-property: opacity;
+      }
       &--active {
         transform: scale(1.1);
         box-shadow: 0px 0px 8px 1px #FE002A;
+        .nav--timeline--link--txt {
+          color: $red;
+        }
         &::after {
           transform: scale(1.1);
         }
@@ -77,7 +130,31 @@
     }
   }
   &--sound {
+    overflow: hidden;
+    width: 55px;
+    height: 59px;
     margin-right: 50px;
+    svg {
+      z-index: -1;
+      position: relative;
+    }
+    &:hover {
+      .circle {
+        stroke: #fff;
+        stroke-dasharray: 300;
+        stroke-dashoffset: 0;
+        animation-iteration-count: 1;
+        animation-name: rotate;
+        animation-duration: 1s;
+        animation-direction: reverse;
+        animation-timing-function: ease-in;
+      }
+    }
+    @keyframes rotate {
+      to {
+       stroke-dashoffset: 300;
+      }
+    }
   }
 }
 
