:bento: Adding intro video + :construction: WIP map parallax

--- a/sources/sass/pages/chapter3.scss
+++ b/sources/sass/pages/chapter3.scss
@@ -24,6 +24,7 @@
         font-size: 18px;
         color: #FFFFFF;
         letter-spacing: 0;
+        color: $transparent-white;
       }
       .graph {
         margin: 0 auto;
