--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -158,20 +158,29 @@ body {
   }
 }
 
-//.slide-hover {
-//  z-index: 400;
-//}
-//
-//.slide-hover::after {
-//  position: absolute;
-//  content: '';
-//  width: 0;
-//  height: 10px;
-//  background-color: rgba(255, 255, 255, 0.49);
-//  top: 15px;
-//  left: -5px;
-//}
-//
-//.slide-hover:hover::after{
-//  width: 60px;
-//}
+.slide-hover {
+  z-index: 400;
+}
+
+.slide-hover:hover {
+  cursor: pointer;
+}
+
+.slide-hover::after {
+  position: absolute;
+  content: '';
+  width: 60px;
+  height: 15px;
+  background-color: $white;
+  top: 10px;
+  left: -6px;
+  z-index: -1;
+  transform-origin: top right;
+  transform: scaleX(0);
+  transition: transform 0.18s ease-in-out;
+}
+
+.slide-hover:hover::after{
+  transform-origin: top left; 
+  transform: scaleX(1);
+}
