--- a/sources/sass/pages/chapter2.scss
+++ b/sources/sass/pages/chapter2.scss
@@ -19,6 +19,9 @@
   }
 
   .scene3 {
+    video.video{
+      width:100vw;
+    }
     .card {
       transform: scaleX(0);
       transition: transform ease-in-out 0.35s;
